--- a/fosahmat_main.tex
+++ b/fosahmat_main.tex
@@ -1,7 +1,7 @@
 % coding:utf-8
 
 %----------------------------------------
-%FOSADSVB, a LaTeX-Code for a summary of higher mathematics
+%FOSAHMAT, a LaTeX-Code for a summary of higher mathematics
 %Copyright (C) 2015, Mario Felder & Michi Fallegger
 
 %This program is free software; you can redistribute it and/or
@@ -17,7 +17,7 @@
 
 \documentclass[a5paper,10pt,fleqn]{book}
 
-\usepackage{fosa_layout}
+\usepackage{fosahmat_layout}
 
 %\setboolean{ti}{true}        % Anleitung für TI-89
 
