--- a/content.tex
+++ b/content.tex
@@ -1,7 +1,7 @@
 % coding:utf-8
 
 %----------------------------------------
-%FOSADSVB, a LaTeX-Code for a summary of higher mathematics
+%FOSAHMAT, a LaTeX-Code for a summary of higher mathematics
 %Copyright (C) 2015, Mario Felder & Michi Fallegger
 
 %This program is free software; you can redistribute it and/or
