--- a/fosahmat_layout.sty
+++ b/fosahmat_layout.sty
@@ -1,7 +1,7 @@
 % coding:utf-8
 
 %----------------------------------------
-%FOSAPHY, a LaTeX-Code for a summary of modern control theory
+%FOSAHMAT, a LaTeX-Code for a summary of higher mathematics
 %Copyright (C) 2015, Mario Felder & Michi Fallegger
 
 %This program is free software; you can redistribute it and/or
