--- a/fosahmat_main.tex
+++ b/fosahmat_main.tex
@@ -26,7 +26,7 @@
 % \title{Formelsammlung DSVB \\ Mit Anleitung zu TI-89}
 % \fi
 
-\author{Mario Felder\\Michi Fallegger}
+\author{Mario Felder}
 \date{\today}
 
 %\catcode `\*=\active
