add vecotor analysis

--- a/fosahmat_layout.sty
+++ b/fosahmat_layout.sty
@@ -99,12 +99,18 @@
 %\newcommand{\im}{\ensuremath{\mathrm{j}}}
 %\newcommand{\e}{\ensuremath{\mathrm{e\;\!}}}
 \newcommand{\di}{\ensuremath{\mathrm{d}}}
+\newcommand{\pdi}{\partial}
 \newcommand{\cis}{\ensuremath{\mathrm{cis}}}
 \newcommand{\bs}{\ensuremath{\backslash}}
+\newcommand{\difrac}[2]{\ensuremath{\frac{\di #1}{\di #2}}}
+\newcommand{\pdifrac}[2]{\ensuremath{\frac{\pdi #1}{\pdi #2}}}
+\DeclareMathOperator{\grad}{grad}
+\DeclareMathOperator{\rot}{rot}
 % \newboolean{ti}
 % \newboolean{nspire}
 % \newboolean{tiboth}
 
+\renewcommand{\arraystretch}{1.3} 
 \newcommand{\schscale}{0.70}
 \newcommand{\schscalesmall}{0.55}
 
