add multiple integrals

--- a/fosahmat_layout.sty
+++ b/fosahmat_layout.sty
@@ -98,7 +98,7 @@
                  {ö}{{\"o}}1 }
 %\newcommand{\im}{\ensuremath{\mathrm{j}}}
 %\newcommand{\e}{\ensuremath{\mathrm{e\;\!}}}
-\newcommand{\di}{\ensuremath{\mathrm{d}}}
+\newcommand{\di}{\ensuremath{\,\mathrm{d}}}
 \newcommand{\pdi}{\partial}
 \newcommand{\cis}{\ensuremath{\mathrm{cis}}}
 \newcommand{\bs}{\ensuremath{\backslash}}
