Structure changed as described in fosaguide

--- a/tex/integral.tex
+++ b/tex/integral.tex
@@ -48,7 +48,7 @@ Variablen werden ersetzt mit:
 
 \subsection{Kugelkoordinaten}
 \begin{center}
-	\includegraphics[width=.25\textwidth]{./images/kugelkoordinaten.png}
+	\includegraphics[width=.25\textwidth]{../fig/kugelkoordinaten.png}
 \end{center}
 \[ V = \iiint\limits_G f(x,y,z)\di V
 	=\iiint\limits_{\tilde{G}} \tilde{f}(r,\phi,\theta)r^2\sin\phi\di r\di\phi\di\theta \]
