--- a/tex/fosahmat_main.tex
+++ b/tex/fosahmat_main.tex
@@ -17,7 +17,7 @@
 
 \documentclass[a5paper,10pt,fleqn]{book}
 
-\usepackage{fosahmat_layout}
+\usepackage{layout}
 
 %\setboolean{ti}{true}        % Anleitung für TI-89
 
