--- a/tex/layout.sty
+++ b/tex/layout.sty
@@ -43,7 +43,7 @@
 \usepackage{venndiagram}
 \usepackage{longtable}
 \usepackage{pdfpages}
-\usepackage{picins}
+%\usepackage{picins}
 \usepackage{array,arydshln}
 \usepackage{trfsigns}
 \usepackage{booktabs}
